# aggressive_trajectory_generation_and_control

./: .gitmodules  drone_model.m  drone_model_attitude.m  ee.mat  feed_back_controller.m  feed_forward_controller.m  feedback_controller_2.m  generate_optimal_trajectory.m  generate_polynomial_trajectory.m  generate_polynomial_trajectory.prj  main_comapre_nn_vs_snap.m  main_compare_2_trajectories.m  main_compare_simulations_with_real_flights.m  main_plot_trajectory_generation_gradient_descent.m  main_verify_attitude_differential_flatness.m  main_verify_attitude_differential_flatness.m~  main_verify_rate_differential_flatness.m  main_verify_rate_differential_flatness.m~  main_verify_snap.m  optimal_control_result.mat  test_generate_polynomial_trajectory.m
c_code/: CMakeLists.txt  simulate_NN.m  test.m
c_code/matlab/: drone_model.m
c_code/power_bebop_drag_h05_n0100/: esa_simulation.h  nn_params.c  nn_params.h
controller/: feed_back_controller_pid.m  feed_forward_controller_dq.m  feedback_controller_2.m
debug/: debug_plot.m
drone_model/: drone_model.m  drone_model_2d.m  drone_model_dq.m
optimal_control/: calculate_force.m  calculate_states_att.m  generate_a_feasible_trajectory.m  main_optimal_control.m  main_plot_pid_optimal_control.m  mycon.m  optimal_control_result.mat  optimal_object.m  plot_variables.m
pid_control/: convert_thrust_moment_to_input.m  drone_dynamics.m  main_pid.m  test_main_pid.m
plot/: aa.mat  bb.mat  cc.mat  compare_minimum_snap_vs_nn.m  dd.mat  plot_attitude.m  plot_faster_rate.m  plot_main.m  plot_nn_trajecoty.m  plot_position.m  (+4 more)
(+46 files in other folders)
